# C-SubsetCompilerUsingLLVM

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  toyc
docs/: Debug_Guide_Instr.md  LLVM_IR.md  LLVM_IR_Standard_Compliance.md  Linear_Scan_Register_Allocation.md  RISC-V工具链兼容性说明.md  从调用链理解的寄存器分配流程.md  从调用链理解的目标代码生成.md  寄存器分配与代码生成详解.md  当前任务.md  汇编到验证完整流程.md  测试使用说明.md  测试命令速查表.md  测试指南.md  线性扫描算法核心思路.md  编译流程详解.md  自定义目录测试说明.md  重构后项目错误修复日志.md  验证功能实现技术文档.md
examples/16/: 16_complex_syntax.c
examples/17/: 17_complex_expressions.c
examples/18/: 18_many_variables.c
examples/20/: 20_comprehensive.c
examples/compiler_inputs/: 08_short_circuit.c  09_recursion.c  15_multiple_return_paths.c  20_test_if.c  28_test_logical_multiple.c  35_test_void.c  36_test_while.c  test_call.c  test_nested_block.c
examples/multi_func/: test_complex.c  test_multiple_funcs.c  test_nested_loops.c
examples/single_func/: test_break_continue.c  test_logic.c  test_modulo.c
examples/spec/: test_fact.c  test_fib.c  test_mix_expr.c  test_unary.c
examples/special_examples/: 19_many_arguments.c
include/toyc/: ir.h  ir_builder.h  ir_parser.h  lexer.h  parser.h  reg_alloc.h  riscv_codegen.h
scripts/: crt0.s  generate_asm.sh  generate_asm_fixed.sh  generate_ast.sh  generate_ir.sh  run_tests.bat  run_tests.ps1  setup_spike_rv32.sh  test_instr.sh  verify_debug.sh  verify_output.sh
src/: ast.cpp  ir.cpp  ir_builder.cpp  ir_parser.cpp  lexer.cpp  llvm_ir.cpp  main.cpp  parser.cpp  ra_debug.cpp  ra_linear_scan.cpp  reg_alloc.cpp  riscv_codegen.cpp  riscv_gen.cpp  unified_test.cpp
src/include/: ast.h  ir.h  ir_builder.h  lexer.h  llvm_ir.h  parser.h  ra_linear_scan.h  riscv_codegen.h  riscv_gen.h  (+1 more)
(+30 files in other folders)
